--- a/LEVEL-1/TASK-1/style.css
+++ b/LEVEL-1/TASK-1/style.css
@@ -71,7 +71,7 @@ header {
   margin-bottom: 10px;
 }
 
-.intro p {
+.intro p1 {
   font-size: 56px;
   font-weight: 300;
 }
@@ -79,7 +79,7 @@ header {
 .socials {
   position: absolute;
   right: 40px;
-  top: 50%;
+  top: 70%;
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
