--- a/LEVEL-1/TASK-1/style.css
+++ b/LEVEL-1/TASK-1/style.css
@@ -113,6 +113,9 @@ header {
   height: 400px;
   border-radius: 50%;
   object-fit: contain;
-  border: 3px solid whitesmoke;
+  border: 1px solid whitesmoke;
   box-shadow: 0 0 15px rgba(255, 204, 203, 0.5);
+  position: absolute;
+  left: 40px;
+  top: 50%;
 }
