--- a/LEVEL-1/TASK-1/style.css
+++ b/LEVEL-1/TASK-1/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'Georgia', serif;
+  font-family: 'Josefin Slab', serif;
   background-color: #2A1313;
   color: white;
   height: 100vh;
@@ -47,7 +47,8 @@ header {
   margin-left: 20px;
   text-decoration: none;
   color: white;
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: bold;
   position: relative;
   transition: color 0.3s ease;
 }
@@ -109,13 +110,34 @@ header {
 }
 
 .about-img{
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
   object-fit: contain;
   border: 1px solid whitesmoke;
   box-shadow: 0 0 15px rgba(255, 204, 203, 0.5);
   position: absolute;
-  left: 40px;
-  top: 50%;
+  left: 130px;
+  top: 30%;
+}
+
+.about-head h1{
+  position: relative;
+  text-align: center;
+  margin-top: 4%;
+  font-size: 80px;
+  opacity: 0.2;
+}
+
+.about-head h2{
+  position: absolute;
+  left: 610px;
+  top:80px;
+  font-size: 35px;
+  border-bottom: 2px solid white;
+}
+
+.about-text p0{
+  font-size:25px;
+  font-weight: bold;
 }
