--- a/LEVEL-1/TASK-1/style.css
+++ b/LEVEL-1/TASK-1/style.css
@@ -494,14 +494,14 @@ header {
 
 .contacts-secondary-head h3{
   position: absolute;
-  font-size: 26px;
+  font-size: 28px;
   top: 170px;
   left: 160px;
 }
 
 .contacts-secondary-head h4{
   position: absolute;
-  font-size: 26px;
+  font-size: 28px;
   top: 170px;
   right: 410px;
 }
@@ -525,7 +525,7 @@ header {
 .name{
   position: absolute;
   left: 160px;
-  top: 230px;
+  top: 220px;
   width: 350px;
   height: 35px;
 }
@@ -535,14 +535,46 @@ header {
   width: 350px;
   height: 35px;
   left: 530px;
-  top: 230px;
+  top: 220px;
 }
 
 .subject{
   position:absolute;
   width: 720px;
   height: 35px;
-  top: 270px;
+  top: 285px;
   left: 160px;
   
+}
+
+.message{
+  position:absolute;
+  width: 720px;
+  left:160px;
+  top:350px;
+  height: 160px;
+}
+
+.contacts-info p1{
+  position:absolute;
+  font-size: 20px;
+  font-weight: 600;
+  right:120px;
+  top:210px;
+}
+
+.vertical-divider{
+  width: 1px;
+  background-color: white;
+  height: auto;
+  margin-right: 10px;
+}
+
+.contacts-icon{
+  text-decoration: none;
+  color: white;
+  font-size: 21px;
+  font-weight: bold;
+  position: absolute; 
+  right: 120;
 }
