--- a/LEVEL-1/TASK-1/style.css
+++ b/LEVEL-1/TASK-1/style.css
@@ -555,6 +555,7 @@ header {
   height: 160px;
 }
 
+
 .contacts-info p1{
   position:absolute;
   font-size: 20px;
@@ -564,24 +565,47 @@ header {
 }
 
 .vertical-divider{
+  position: absolute;
+  top: 280px;
+  right:520px;
   width: 1px;
-  background-color: white;
-  height: auto;
-  margin-right: 10px;
+  background-color: #ccc;
+  height: 225px;
 }
 
 .contacts-icon{
-  text-decoration: none;
+  display: flex;
+  position: absolute;
+  right:540px;
+  top:275px;
+  flex-direction: column;
+  gap: 40px;
+  font-size: 19px;
   color: white;
-  font-size: 21px;
-  font-weight: bold;
-  position: absolute; 
-  right: 120;
+  padding-top: 5px;
 }
 
 .contacts-info-main{
   position: absolute;
   font-size: 18px;
-  right:180px;
+  right:170px;
   top: 280px;
+}
+
+.submit{
+  position: absolute;
+  top:550px;
+  left:160px;
+  height:40px;
+  width:190px;
+  display: inline-flex;
+  text-decoration: none;
+  align-items: center;
+  gap: 10px;
+  padding: 14px 28px;
+  border: 2px solid #5a4f58; 
+  border-radius: 20px;
+  font-size: 18px;
+  color: white;
+  transition: background 0.3s ease, color 0.3s ease;
 }
