--- a/LEVEL-1/TASK-1/style.css
+++ b/LEVEL-1/TASK-1/style.css
@@ -625,17 +625,57 @@ header {
 }
 
 .filter-btn {
-  position: relative;
-  text-align: center;
   font-size: 20px;
   background: none;
   border: none;
   color: white;
   margin: 0 10px;
   cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.filter-btn button::after{
+  content: '';
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  bottom: -2px;
+  left: 0;
+  background-color: white;
+  transition: width 0.3s ease;
 }
 
 .filter-btn:hover {
   color:white;
   text-decoration: underline;
+}
+
+
+.nav-links a {
+  margin-left: 20px;
+  text-decoration: none;
+  color: white;
+  font-size: 21px;
+  font-weight: bold;
+  position: relative;
+  transition: color 0.3s ease;
+}
+
+.nav-links a::after {
+  content: '';
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  bottom: -2px;
+  left: 0;
+  background-color: white;
+  transition: width 0.3s ease;
+}
+
+.nav-links a:hover {
+  color: #ffcccb;
+}
+
+.nav-links a:hover::after {
+  width: 100%;
 }
