--- a/LEVEL-1/TASK-3/style.css
+++ b/LEVEL-1/TASK-3/style.css
@@ -1,62 +1,37 @@
-body {
-  background-color: #121212;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  font-family: 'Caveat', cursive;
+body{
+    background-color:black;
+    font-family: Caveat, cursive;
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center; 
+    align-items: center
 }
 
-.calculator {
-  background-color: #394931; /* dark green */
-  padding: 20px;
-  border-radius: 10px;
-  width: 320px;
+.calculator{
+    width: 400px;
+    height: 600px;
+    background-color: #394931;
+    border-radius: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
-.calculator h1 {
-  text-align: center;
-  color: #d4d0b9;
-  font-size: 34px;
-  margin-bottom: 20px;
+.calculator h1{
+    position: relative;
+    text-align: center;
+    margin: 0;
+    color: #d4d0b9;
+    font-size: 60px;
+    font-weight: 300;
 }
 
 .display {
-  width: 100%;
-  height: 50px;
-  font-size: 24px;
-  padding: 10px;
-  margin-bottom: 20px;
-  text-align: right;
-  border: none;
-  border-radius: 5px;
-  background-color: #d6d6b1; /* light beige */
-  color: #000;
-}
-
-.buttons {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-}
-
-button {
-  padding: 20px;
-  font-size: 18px;
-  border: none;
-  border-radius: 5px;
-  background-color: #d6d6b1;
-  color: #000;
-  cursor: pointer;
-  transition: background-color 0.2s;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
-}
-
-button:hover {
-  background-color: #c0c08c;
-}
-
-.equal {
-  grid-column: span 2;
+    width: 300px;
+    height: 35px;
+    font-size: 24px;
+    background-color: #d4d0b9;
+    text-align: right;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;;
 }
