--- a/LEVEL-1/TASK-3/style.css
+++ b/LEVEL-1/TASK-3/style.css
@@ -26,12 +26,37 @@ body{
 }
 
 .display {
-    width: 300px;
-    height: 35px;
-    font-size: 24px;
+    width: 340px;
+    height: 50px;
+    font-size: 30px;
     background-color: #d4d0b9;
     text-align: right;
-    text-decoration: none;
+    margin-left: 20px;
     border: none;
-    border-radius: 5px;;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.buttons{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;  
+    padding: 20px;
+}
+
+button{
+    height: 80px;
+    background-color: #d4d0b9;
+    width: 80px;
+    border-radius: 5px;
+    font-size: 24px;
+    border: none;
+    font-weight: 700;
+    font-family: Caveat, cursive;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.equal{
+    grid-column: span 2;
 }
