updated style file

--- a/LEVEL-1/TASK-3/style.css
+++ b/LEVEL-1/TASK-3/style.css
@@ -62,10 +62,6 @@ button:hover{
     transform: scale(1.05);
 }
 
-.buttons .equal {
+.equal{
     grid-column: span 2;
-}
-
-.placeholder {
-    visibility: hidden;
 }
