--- a/LEVEL-1/TASK-3/style.css
+++ b/LEVEL-1/TASK-3/style.css
@@ -47,9 +47,9 @@ body{
 button{
     height: 80px;
     background-color: #d4d0b9;
-    width: 80px;
+    width: 100%;
     border-radius: 5px;
-    font-size: 24px;
+    font-size: 40px;
     border: none;
     font-weight: 700;
     font-family: Caveat, cursive;
