--- a/LEVEL-1/TASK-3/style.css
+++ b/LEVEL-1/TASK-3/style.css
@@ -14,6 +14,11 @@ body{
     background-color: #394931;
     border-radius: 20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    position: absolute;
+    background-image: url('assets/pic0.png'); 
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .calculator h1{
