--- a/LEVEL-1/TASK-2/style.css
+++ b/LEVEL-1/TASK-2/style.css
@@ -60,3 +60,85 @@ header h1 {
 .nav-links a:hover::after {
   width: 100%;
 }
+
+.auto-slider {
+  width: 100vw;
+  height: 80vh;
+  overflow: hidden;
+  position: relative;
+}
+
+.slide::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); 
+  z-index: 1;
+}
+
+.slide {
+  width: 100vw;
+  height: 80vh;
+  flex-shrink: 4;
+  background-color: rgba(0, 0, 0, 0.1); 
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+#slide1 { background-image: url('assets/intro2.jpg'); }
+#slide2 { background-image: url('assets/skincare1.jpg'); }
+#slide3 { background-image: url('assets/bodycare1.jpg'); }
+#slide4 { background-image: url('assets/haircare1.jpg'); }
+
+.text-overlay {
+  position: absolute;
+  top:40%;
+  left: 20%;
+  text-align: center;
+  color: white;
+  z-index: 2;
+  text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+}
+
+.text-overlay h2{
+  position: relative;
+  top: 50%;
+  font-size: 49px;
+  font-weight: 500;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.text-overlay p1{
+  position: absolute;
+  top: 100%;
+  left: 40%;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 800;
+}
+
+.text-overlay p{
+  position: absolute;
+  top: 120%;
+  left: 40%;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+}
+
+.slides {
+  display: flex;
+  width: calc(100% * 4); /* total 6 slides */
+  animation: slideAnimation 14s ease-in-out infinite alternate;
+}
+
+@keyframes slideAnimation {
+  0%   { transform: translateX(0); }
+  33%  { transform: translateX(-100vw); }
+  66%  { transform: translateX(-200vw); }
+  100% { transform: translateX(-300vw); }
+}
+
+
+
