--- a/LEVEL-1/TASK-2/style.css
+++ b/LEVEL-1/TASK-2/style.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
 }
 
-body {
+html,body {
+  max-width: 100%;
+  overflow-x: hidden;
   background-color: #312e2e;
   color: white;
   font-family: 'Montserrat', sans-serif;
@@ -140,5 +142,47 @@ header h1 {
   100% { transform: translateX(-300vw); }
 }
 
+.category-buttons-section {
+  background-color: #4e4949; /* Adjust to match your screenshot background */
+  padding: 0 0 80px 0;
+}
+
+.category-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  background-color: #2b2a2a;
+  margin-top: -120px;
+  height: 800px;
+}
+
+.category {
+  width: 450px;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+  color: white;
+  cursor: pointer;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
+}
+
+.category:hover {
+  transform: scale(1.05);
+}
+
+.skincare {background-image: url('assets/buttons/skincare.jpg');}
+.bodycare {background-image: url('assets/buttons/bodycare.jpg');}
+.haircare {background-image: url('assets/buttons/haircare.jpg');}
 
 
