--- a/LEVEL-1/TASK-2/style.css
+++ b/LEVEL-1/TASK-2/style.css
@@ -76,7 +76,7 @@ header h1 {
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3); 
+  background-color: rgba(0, 0, 0, 0.2); 
   z-index: 1;
 }
 
@@ -131,7 +131,7 @@ header h1 {
 
 .slides {
   display: flex;
-  width: calc(100% * 4); /* total 6 slides */
+  width: calc(100% * 4); 
   animation: slideAnimation 14s ease-in-out infinite alternate;
 }
 
@@ -142,9 +142,17 @@ header h1 {
   100% { transform: translateX(-300vw); }
 }
 
+.category-intro h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 44px;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 40px;
+  text-decoration: underline;
+}
+
 .category-buttons-section {
-  background-color: #4e4949; /* Adjust to match your screenshot background */
-  padding: 0 0 80px 0;
+  background-color: #4e4949; 
 }
 
 .category-buttons {
@@ -153,19 +161,19 @@ header h1 {
   align-items: center;
   gap: 40px;
   background-color: #2b2a2a;
-  margin-top: -120px;
+  margin-top: -100px;
   height: 800px;
 }
 
 .category {
-  width: 450px;
+  width: 420px;
   height: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: 'Montserrat', sans-serif;
-  font-size: 22px;
-  font-weight: 700;
+  font-size: 29px;
+  font-weight: 500;
   color: white;
   cursor: pointer;
   transition: transform 0.3s ease, background-color 0.3s ease;
@@ -175,6 +183,14 @@ header h1 {
   background-size: cover;
   position: relative;
   text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
+
+}
+.category::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.2); 
+  z-index: 2;
 }
 
 .category:hover {
@@ -185,4 +201,40 @@ header h1 {
 .bodycare {background-image: url('assets/buttons/bodycare.jpg');}
 .haircare {background-image: url('assets/buttons/haircare.jpg');}
 
+.brand-marquee {
+  background-color: #2b2a2a; /* Same as buttons background */
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 20px 0;
+}
+
+.brand-track {
+  display: inline-block;
+  animation: scrollBrands 25s linear infinite;
+}
+
+.brand-track span {
+  display: inline-block;
+  margin: 0 60px;
+  font-size: 24px;
+  font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffffcc;
+  transition: transform 0.3s ease;
+  letter-spacing: 1px;
+}
+
+.brand-track span:hover {
+  transform: scale(1.1);
+  color: #fff;
+}
+
+@keyframes scrollBrands {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
 
