--- a/LEVEL-1/TASK-2/style.css
+++ b/LEVEL-1/TASK-2/style.css
@@ -226,7 +226,7 @@ header h1 {
 }
 
 .masonry-gallery {
-  padding: 50px 30px;
+  padding: 50px 50px;
   margin: 0 auto;
   background-color: #5c5c5c;
   position: relative; 
@@ -252,10 +252,11 @@ header h1 {
   text-decoration: underline;
   text-decoration-thickness: 1px;
   text-underline-offset: 8px;
+  margin-bottom: 20px;
 }
 
 .masonry {
-  column-count: 3;
+  column-count: 4;
   column-gap: 20px;
 }
 
@@ -271,8 +272,11 @@ header h1 {
 
 .masonry img {
   width: 100%;
+  height: auto; 
   display: block;
+  border-radius: 6px;
   transition: transform 0.3s ease;
+  object-fit: cover;
 }
 
 .masonry a:hover img {
