--- a/LEVEL-1/TASK-2/style.css
+++ b/LEVEL-1/TASK-2/style.css
@@ -436,11 +436,14 @@ header h1 {
 }
 
 .newsletter {
-  padding: 40px 70px;
-  margin: 0;
+  padding: 50px 70px;
+  margin-bottom: 0;
+  padding-bottom: 0;
   background-color: #5c5c5c;
-  position: relative; 
+  position: relative;
   z-index: 1;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .newsletter::before {
@@ -449,30 +452,53 @@ header h1 {
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.65); 
+  background-color: rgba(0, 0, 0, 0.65);
   z-index: -1;
 }
 
-.newsletter-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 60px;
-  margin-top: 30px;
-  flex-wrap: wrap;
+.newsletter h2 {
+  font-size: 44px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 20px;
+  text-decoration: underline;
+  text-underline-offset: 8px;
+  text-decoration-thickness: 1px;
+}
+
+.newsletter .tagline {
+  position: absolute;
+  left: 800px;
+  top: 130px;
+  font-weight: 500;
+  font-size: 24px;
+  letter-spacing: 3px;
+  color: white;
+  margin-bottom: 10px;
+}
+
+.newsletter .subtext {
+  position: absolute;
+  left: 650px;
+  top: 170px;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 1.6;
+  margin-bottom: 40px;
 }
 
 .circle-collage-grid {
-  width: 450px;
-  height: 450px;
+  position: relative;
+  width: 500px;
+  height: 500px;
   border-radius: 50%;
   overflow: hidden;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 6px; 
+  gap: 6px;
   border: none;
-  margin-left: 50px;
 }
 
 .circle-collage-grid img {
@@ -482,99 +508,52 @@ header h1 {
   display: block;
 }
 
-.newsletter h2 {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 44px;
-  font-weight: 500;
-  text-align: center;
-  margin-top: 10px;
-  text-decoration: underline;
-  text-decoration-thickness: 1px;
-  text-underline-offset: 8px;
-  margin-bottom: 30px;
-}
-
-.newsletter p1,
-.newsletter p,
-.newsletter form {
-  position: static;
-  color: white;
-  font-family: 'Montserrat', sans-serif;
-}
-
-.newsletter p1 {
-  font-size: 16px;
-  font-weight: 300;
-  color: #f7b7c3;
-  margin-bottom: 10px;
-  display: block;
-}
-
-.newsletter p {
-  font-size: 20px;
-  font-weight: 400;
-  text-align: left;
-  line-height: 1.6;
-  margin-bottom: 20px;
-}
-
-.newsletter form {
-  display: flex;
-  gap: 10px;
-  flex-wrap: wrap;
-}
-
-.newsletter form input[type="email"] {
+.newsletter-form input[type="email"] {
   padding: 12px 20px;
+  position: absolute;
+  left:700px;
+  top: 300px;
   border: none;
-  border-radius: 25px;
-  font-size: 16px;
-  outline: none;
-  width: 280px;
+  font-size: 19px;
+  height: 50px;
+  width: 500px;
   background: white;
-  color: #333;
+  color: #010101
 }
 
-.newsletter form button {
+.newsletter-form button {
+  position: absolute;
+  top: 300px;
+  left: 1200px;
   padding: 12px 24px;
   border: none;
-  border-radius: 25px;
-  background-color: #f7b7c3;
-  color: white;
-  font-size: 16px;
+  background-color: #010101;
+  color: #fff;
+  font-size: 19px;
+  font-weight: 600;
   cursor: pointer;
+  height: 50px;
+  letter-spacing: 5px;
+  width: 170px;
   transition: 0.3s ease;
 }
 
-.newsletter form button:hover {
+.newsletter-form button:hover {
   background-color: #f59bb1;
 }
-
 footer {
     background-color: #010101;
     color: whit;
-    text-align: center;
+    text-align: left;
+    padding-left: 20px;
     padding: 20px 10px;
     font-family: 'Montserrat', sans-serif;
-    margin-top: 40px;
+    margin-top: 0px;
 }
 
 footer p {
     margin: 10px 0;
-    font-size: 24px;
+    font-size: 20px;
 }
 
-footer .social-icons {
-    margin-top: 10px;
-}
 
-footer .social-icons a {
-    color: white;
-    margin: 0 10px;
-    font-size: 18px;
-    transition: color 0.3s ease;
-}
-
-footer .social-icons a:hover {
-    color: #ffb6c1;
-}
