--- a/LEVEL-1/TASK-1/style.css
+++ b/LEVEL-1/TASK-1/style.css
@@ -486,7 +486,7 @@ header {
 
 .contacts-head h2{
   position: absolute;
-  left: 640px;
+  left: 620px;
   top:80px;
   font-size: 35px;
   border-bottom: 2px solid white;
@@ -618,64 +618,55 @@ header {
 
 .projects-head h2{
   position: absolute;
-  left: 690px;
+  left: 670px;
   top:80px;
   font-size: 35px;
   border-bottom: 2px solid white;
 }
 
-.filter-btn {
+.projects-links{
+  font-size: 20px;
+  background: none;
+  border: none;
+  color: white;
+  margin-left: 100px;
+  margin: 0 10px;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.filter-links {
+  text-align: center;
+  margin: 30px 0;
+}
+
+.filter-links button {
   font-size: 20px;
   background: none;
   border: none;
   color: white;
   margin: 0 10px;
   cursor: pointer;
-  transition: color 0.3s ease;
-}
-
-.filter-btn button::after{
-  content: '';
-  position: absolute;
-  width: 0%;
-  height: 2px;
-  bottom: -2px;
-  left: 0;
-  background-color: white;
-  transition: width 0.3s ease;
-}
-
-.filter-btn:hover {
-  color:white;
-  text-decoration: underline;
-}
-
-
-.nav-links a {
-  margin-left: 20px;
-  text-decoration: none;
-  color: white;
-  font-size: 21px;
-  font-weight: bold;
   position: relative;
+  padding: 8px 12px;
   transition: color 0.3s ease;
 }
 
-.nav-links a::after {
+.filter-links button::after {
   content: '';
   position: absolute;
   width: 0%;
   height: 2px;
-  bottom: -2px;
+  bottom: 0;
   left: 0;
   background-color: white;
   transition: width 0.3s ease;
 }
 
-.nav-links a:hover {
-  color: #ffcccb;
+.filter-links button:hover::after {
+  width: 100%;
 }
 
-.nav-links a:hover::after {
-  width: 100%;
+.filter-links button:hover {
+  color: #ffffff;
 }
